--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <div class="media-body text-md-left ml-md-3 ml-0">
           <h4 class="mt-0">Project Forecast</h4>
           Take a list of staff for a project and allocates their hours across the course of the project based on a standard burn rate that applies depending on the period of the project.
-          <p><a href="https://alexjmette.github.io/forecast">Read more.</a></p>
+          <p><a href="https://alexjmette.github.io/forecast.html">Read more.</a></p>
         </div>
       </div>
     
