--- a/forecast.html
+++ b/forecast.html
@@ -29,6 +29,14 @@
 
   <body>
 
+	<nav class="navbar-expand-lg navbar-light" style="background-color: #264653">
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item">
+			  <a class="nav-link" href="https://alexjmette.github.io/">am</a>
+			</li>
+		  </ul>
+	  </nav>
+
     <div class="jumbotron container-fluid rounded-0" background-size: cover; style="background-image: url(images/surfbw.jpg)">
 		<div class="container">
 			<h1 class="display-1 text-center mt-1 mb-1">Alex Mette</h1>
