--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- main page-->
   
     <div class="jumbotron jumbotron-fluid">
-      <div class="container">
+      <div class="container" style="background-image: url("images/kite.jpg");">
     <div class="row min-vh-100">
 
   <!--navbar-->
