--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
   <!-- main page-->
   
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container" style="background-image: url("images/kite.jpg");">
+    <div class="jumbotron jumbotron-fluid" style="background-image: url('images/kite.jpg');">
+      <div class="container">
     <div class="row min-vh-100">
 
   <!--navbar-->
