changed headline text color

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
   <!-- headline -->
 
       <div class="col-md-4">
-          <h1 class="display 1 text-light text-left font-weight-bold">Alex Mette</h1>
-          <h4 class="text-light text-left mb-xl-5 pb-xl-5">Salesforce Developer</h4>      
+          <h1 class="display 1 text-left font-weight-bold">Alex Mette</h1>
+          <h4 class="text-left mb-xl-5 pb-xl-5">Salesforce Developer</h4>      
       </div>
 
 
