--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="col-md-4">
           <img id="About" src="images/AlexTrailhead.png" class="rounded mx-auto d-block mt-xl-5 pt-xl-5">
       </div>
-    <div class="col-md-8">
+      <div class="col-md-8">
         <p class="text-left mt-xl-5 pt-xl-5">
           I'm a 4x certified Salesforce professional, Trailhead Ranger, and all-around wrangler of people,
           processes, and data. I've worked with for-profit companies, non-profits, and start-ups in three countries.
@@ -109,10 +109,29 @@
           to work with people from across the board, and I care deeply about helping people be happier in their work. 
           Especially when that work is making the world a better place.
         </p>
+      </div>
     </div>
-    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-2">
+        </div>
+        <div class="col-sm-2">
+          <img src="images/cert-dev.png" class="rounded mx-auto d-block">
+        </div>
+        <div class="col-sm-2">
+          <img src="images/cert-app-builder.png" class="rounded mx-auto d-block">
+        </div>
+        <div class="col-sm-2">
+          <img src="images/cert-admin.png" class="rounded mx-auto d-block">
+        </div>
+        <div class="col-sm-2">
+          <img src="images/cert-sales.png" class="rounded mx-auto d-block">
+        </div>
+      </div>
     </div>
   </div>
+
 
 
 
