--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <!-- main page-->
   
-    <div class="jumbotron jumbotron-fluid" style="background-image: url('images/kite.jpg'); background-color: black">
+    <div class="jumbotron jumbotron-fluid" "background-color: white">
       <div class="container">
     <div class="row min-vh-100">
 
