--- a/index.html
+++ b/index.html
@@ -40,27 +40,24 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
 
-        <h2 class="display-4">am</h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-        <ul class="nav navbar-nav abs-center-x">
-          <li class="nav-item">
-            <a class="nav-link font-weight-bold mr-5" href="#About"><u>About</u></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link font-weight-bold mr-5" href="#Projects"><u>Projects</u></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link font-weight-bold mr-5" href="#Interests"><u>Interests</u></a>
-          </li>
-        </ul>
-        
-    <!--contact me button-->
+
+    <!--social links and contact button-->
         <ul class="nav navbar-nav ml-auto col-xs-4">
+          <li class="nav-item">
+            <a class="nav-link font-weight-bold" href="https://www.linkedin.com/in/alexanderjmette/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin_icon.png"> </u></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link font-weight-bold" href="https://trailblazer.me/id/alexmette" target="_blank" rel="noopener noreferrer"><img src="images/trailhead_icon.png"> </u></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link font-weight-bold" href="https://github.com/alexjmette" target="_blank" rel="noopener noreferrer"><img src="images/github_icon.png"> </u></a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.linkedin.com/in/alexanderjmette/" target="_blank" rel="noopener noreferrer"> <button type="button" class="btn btn-outline-primary rounded-pill"> Contact me</button> </a>
           </li>
@@ -72,62 +69,32 @@
 
 
 
-  <!--Front Page-->
+  <!--Main page-->
   <div class="container h-100">  
     <div class="row align-items-center h-100">
       <div class="col-md-6 mx-auto">
-        <h1 class="display 1 text-left font-weight-bold mt-xl-5 pt-xl-5">Hello, I'm Alex Mette</h1>
-        <h4 class="text-left">Salesforce Certified Developer, Admin, Trailhead Ranger and general wrangler of data and processes</h4>
-      </div>
-      <div class="col-md-6">
-        <img src="images/alexheadshot.png" class="float-right mt-xl-5 pt-xl-5">
-      </div>
-    </div>
-  </div>
-
-
-  <!--contact me button-->
-<div class="row">
-  <div class="col-md-5">
-    <a href="https://www.linkedin.com/in/alexanderjmette/" target="_blank" rel="noopener noreferrer"> <button class="btn btn-primary mb-5" type="submit"> Contact me</button> </a>
-</div>
-</div>        
-  <!--social links-->
-  <div class="row">
-  <div class="col-sm-2 mt-3">
-    <div class="row">
-      <div class="col-sm">
-        <a href="https://www.linkedin.com/in/alexanderjmette/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin_icon.png"> </a>
-      </div>
-      <div class="col-sm">
-        <a href="https://trailblazer.me/id/alexmette" target="_blank" rel="noopener noreferrer"><img src="images/trailhead_icon.png"> </a>
-      </div>
-      <div class="col-sm">
-        <a href="https://github.com/alexjmette" target="_blank" rel="noopener noreferrer"><img src="images/github_icon.png"> </a>
-      </div>
-    </div> 
-  </div> 
-</div>
-
-
-  <!--About Section-->
-  <div class="container">  
-    <div class="row">
-
-      <div class="col">
-        <p class="text-left mt-xl-5 pt-xl-5">
+        <h1 class="display 1 text-left font-weight-bold mt-xl-5 pt-xl-5 mb-3">Alex Mette</h1>
+        <p class="text-left">
           I'm a 4x certified Salesforce professional, Trailhead Ranger, and all-around wrangler of people,
           processes, and data. I've worked with for-profit companies, non-profits, and start-ups in three countries.
-          First as in business development and then as a Salesforce admin and developer.
+          First in business development and then as a Salesforce admin and developer.
         </p>
-        <p class="text-left mb-xl-5 pb-xl-5">
+        <p class="text-left">
           I started working with Salesforce in 2013
           and pivoted to do Salesforce full-time in 2017. I have an eye for what matters to the business, an ability
           to work with people from across the board, and I care deeply about helping people be happier in their work. 
           Especially when that work is making the world a better place.
         </p>
+        <a href="https://www.linkedin.com/in/alexanderjmette/" target="_blank" rel="noopener noreferrer"> <button class="btn btn-primary mt-3 mb-5" type="submit"> Contact me</button> </a>
+      </div>
+        
+      <div class="col-md-6">
+        <img src="images/alexheadshot.png" class="float-right mt-xl-5 pt-xl-5 mb-5 pb-5">
       </div>
     </div>
+  </div>      
+  
+  <!--Certs-->
 
     <div class="container">
       <div class="row">
